--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,19 @@
 ﻿{% extends 'base.html' %}
 
 {% block content %}
+<script type="text/javascript">
+function set_openid(openid, pr)
+{
+    u = openid.search('<username>')
+    if (u != -1) {
+        // openid requires username
+        user = prompt('Enter your ' + pr + ' username:')
+        openid = openid.substr(0, u) + user
+    }
+    form = document.forms['login'];
+    form.elements['openid'].value = openid
+}
+</script>
 <h1>Sign In</h1>
 <form action="" method="post" name="login">
     {# form.hidden_tag() 模板参数将被替换为一个隐藏字段，用来是实现在配置中激活的 CSRF 保护。#}
@@ -15,7 +28,11 @@
         {% for error in form.openid.errors %}
         <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
+        |{% for pr in providers %}
+        <a href="javascript:set_openid('{{ pr.url }}', '{{ pr.name }}');">{{ pr.name }}</a>|
+        {% endfor %}
     </p>
     <p>{{form.remember_me}} Remember Me</p>
     <p><input type="submit" value="Sign In"></p>
 </form>
+{% endblock %}
