--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
 <body>
     <div>Microblog: <a href="/index">Home</a>
         {% if g.user.is_authenticated %}
-        <a href="{{ url_for('logout') }}">Logout</a>
+        |<a href="{{ url_for('user', nickname=g.user.nickname) }}">Your profile</a>
+        |<a href="{{ url_for('logout') }}">Logout</a>
         {% endif %}
     </div>
     <hr />
